27_matrix_input/grade.txt
Grading at Mon Mar 11 17:07:26 UTC 2019
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:67:16: error: expected expression before ‘,’ token
       printf(c%, "mat[r][c]");
                ^
The code did not compile!

Overall Grade: F
